--- a/src/main/frontend/src/app/nav/nav.html
+++ b/src/main/frontend/src/app/nav/nav.html
@@ -9,10 +9,10 @@
     }
 </style>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -20,7 +20,7 @@
             </button>
             <a class="navbar-brand" ui-sref="home">Hour reporting system</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div class="navbar-collapse collapse" uib-collapse="isNavCollapsed">
             <ul class="nav navbar-nav">
                 <li ng-show="user.username"><a ui-sref="users">Users</a></li>
                 <li ng-show="user.username"><a ui-sref="employees">Employees</a></li>
