--- a/src/main/frontend/src/app/nav/nav.html
+++ b/src/main/frontend/src/app/nav/nav.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
+            <button type="button" class="navbar-toggle collapsed" ng-click="isNavCollapsed = !isNavCollapsed">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -20,7 +20,7 @@
             </button>
             <a class="navbar-brand" ui-sref="home">Hour reporting system</a>
         </div>
-        <div class="navbar-collapse collapse" uib-collapse="isNavCollapsed">
+        <div class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
             <ul class="nav navbar-nav">
                 <li ng-show="user.username"><a ui-sref="users">Users</a></li>
                 <li ng-show="user.username"><a ui-sref="employees">Employees</a></li>
