--- a/src/main/frontend/src/app/login/login.html
+++ b/src/main/frontend/src/app/login/login.html
@@ -13,7 +13,7 @@
 							class="form-control" id="pwd" ng-model="password">
 					</div>
 					<button type="submit" class="btn btn-default">Submit</button>
-					<div class="alert alert-info margin-top-5" ng-show="message">{{message}}</div>
+					<div style="margin-top: 10px;" class="alert alert-info margin-top-5" ng-show="message">{{message}}</div>
 				</form>
 			</div>
 		</div>
