--- a/src/main/frontend/src/app/nav/nav.html
+++ b/src/main/frontend/src/app/nav/nav.html
@@ -25,6 +25,7 @@
                 <li ng-show="user.username"><a ui-sref="users">Users</a></li>
                 <li ng-show="user.username"><a ui-sref="employees">Employees</a></li>
                 <li ng-show="user.username"><a ui-sref="register">Register</a></li>
+                <li ng-show="user.username"><a ui-sref="calendar">Calendar</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-show="user.username"><a> <span class="user">Hi, {{user.name}}</span> <span ng-click="logout()" href="" class="logout">Logout</span></a></li>
