employees multi select

--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -47,7 +47,11 @@
       </p>
     </div>
     <div class="col-md-6">
-      <!-- TODO: employees select -->
+      <multi-employees-select
+        model="lcCtrl.fliterCriteria.employees"
+        placeholder="employees"
+      >
+      </multi-employees-select>
     </div>
   </div>
 </div>
