--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -1,57 +1,59 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <p class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          uib-datepicker-popup
-          ng-model="lcCtrl.fliterCriteria.dateFrom"
-          is-open="lcCtrl.dateFromPickerOpened"
-          datepicker-options="lcCtrl.dateOptions"
-          close-text="Close"
-          placeholder="date from"
-        />
-        <span class="input-group-btn">
-          <button
-            type="button"
-            class="btn btn-default"
-            ng-click="lcCtrl.openDateFromPickerModal()"
-          >
-            <i class="glyphicon glyphicon-calendar"></i>
-          </button>
-        </span>
-      </p>
-    </div>
-    <div class="col-md-3">
-      <p class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          uib-datepicker-popup
-          ng-model="lcCtrl.fliterCriteria.dateTo"
-          is-open="lcCtrl.dateToPickerOpened"
-          datepicker-options="lcCtrl.dateOptions"
-          close-text="Close"
-          placeholder="date to"
-        />
-        <span class="input-group-btn">
-          <button
-            type="button"
-            class="btn btn-default"
-            ng-click="lcCtrl.openDateToPickerModal()"
-          >
-            <i class="glyphicon glyphicon-calendar"></i>
-          </button>
-        </span>
-      </p>
-    </div>
-    <div class="col-md-6">
-      <multi-employees-select
-        model="lcCtrl.fliterCriteria.employees"
-        placeholder="employees"
-      >
-      </multi-employees-select>
+  <div class="row panel panel-default">
+    <div class="panel-body">
+      <div class="col-md-3">
+        <p class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            uib-datepicker-popup
+            ng-model="lcCtrl.fliterCriteria.dateFrom"
+            is-open="lcCtrl.dateFromPickerOpened"
+            datepicker-options="lcCtrl.dateOptions"
+            close-text="Close"
+            placeholder="date from"
+          />
+          <span class="input-group-btn">
+            <button
+              type="button"
+              class="btn btn-default"
+              ng-click="lcCtrl.openDateFromPickerModal()"
+            >
+              <i class="glyphicon glyphicon-calendar"></i>
+            </button>
+          </span>
+        </p>
+      </div>
+      <div class="col-md-3">
+        <p class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            uib-datepicker-popup
+            ng-model="lcCtrl.fliterCriteria.dateTo"
+            is-open="lcCtrl.dateToPickerOpened"
+            datepicker-options="lcCtrl.dateOptions"
+            close-text="Close"
+            placeholder="date to"
+          />
+          <span class="input-group-btn">
+            <button
+              type="button"
+              class="btn btn-default"
+              ng-click="lcCtrl.openDateToPickerModal()"
+            >
+              <i class="glyphicon glyphicon-calendar"></i>
+            </button>
+          </span>
+        </p>
+      </div>
+      <div class="col-md-6">
+        <multi-employees-select
+          model="lcCtrl.fliterCriteria.employees"
+          placeholder="employees"
+        >
+        </multi-employees-select>
+      </div>
     </div>
   </div>
 </div>
