--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -57,7 +57,6 @@
     </div>
   </div>
 </div>
-
 <div class="row">
   <div class="col-lg-3">
     <button class="btn btn-primary">Log work time</button>
@@ -65,16 +64,33 @@
   <div class="col-lg-9">
     <div class="btn-group btn-group-justified" role="group">
       <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">Calendar</button>
+        <button
+          type="button"
+          class="btn btn-default"
+          ng-class="{'active': !lcCtrl.listViewActive}"
+          ng-click="lcCtrl.toggleListViewActive()"
+        >
+          <span class="toggle-button-margin">Calendar View</span
+          ><small><i class="glyphicon glyphicon-calendar"></i></small>
+        </button>
       </div>
       <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default">List</button>
+        <button
+          type="button"
+          class="btn btn-default"
+          ng-class="{'active': lcCtrl.listViewActive}"
+          ng-click="lcCtrl.toggleListViewActive()"
+        >
+          <span class="toggle-button-margin">List View</span
+          ><small><i class="glyphicon glyphicon glyphicon-th-list"></i></small>
+        </button>
       </div>
     </div>
     <div
       ui-calendar="uiConfig.calendar"
       class="span8 calendar"
       ng-model="eventSources"
+      ng-show="!lcCtrl.listViewActive"
     ></div>
   </div>
 </div>
