--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -70,7 +70,7 @@
         <button
           type="button"
           class="btn btn-primary"
-          ng-click="lcCtrl.openNewReportModal()"
+          ng-click="lcCtrl.openReportModal()"
         >
           <span>Report work </span>
           <small><i class="glyphicon glyphicon-plus"></i></small>
