--- a/src/main/frontend/src/app/report-details/report-details.template.html
+++ b/src/main/frontend/src/app/report-details/report-details.template.html
@@ -3,9 +3,82 @@
     <h3 class="modal-title" ng-show="!rdCtrl.reportId">New work report</h3>
     <h3 class="modal-title" ng-show="rdCtrl.reportId">Work preview</h3>
   </div>
-  <div class="modal-body" id="modal-body"></div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="date">Date</label>
+        <p class="input-group" ng-show="!rdCtrl.reportId">
+          <input
+            type="text"
+            class="form-control"
+            uib-datepicker-popup
+            ng-model="rdCtrl.report.date"
+            is-open="rdCtrl.datePickerOpened"
+            datepicker-options="rdCtrl.dateOptions"
+            close-text="Close"
+            placeholder="date"
+            name="date"
+          />
+          <span class="input-group-btn">
+            <button
+              type="button"
+              class="btn btn-default"
+              ng-click="rdCtrl.openDatePickerModal()"
+            >
+              <i class="glyphicon glyphicon-calendar"></i>
+            </button>
+          </span>
+        </p>
+        <p ng-show="rdCtrl.reportId" ng-model="rdCtrl.report.hoursNumber"></p>
+      </div>
+      <div class="form-group">
+        <label for="hoursNumber">Hours number</label>
+        <div class="input-group" ng-show="!rdCtrl.reportId">
+          <input type="number" class="form-control" />
+          <span class="input-group-addon">h</span>
+        </div>
+        <p ng-show="rdCtrl.reportId" ng-model="rdCtrl.report.hoursNumber"></p>
+      </div>
+      <div class="form-group">
+        <label>Project</label>
+        <item-select
+          model="rdCtrl.report.projectName"
+          model-id="rdCtrl.report.projectId"
+          placeholder="project"
+          provider="rdCtrl.provideProjects(request)"
+          disabled="rdCtrl.reportId"
+        >
+        </item-select>
+      </div>
+      <div class="form-group" ng-show="rdCtrl.reportId">
+        <label>Employee</label>
+        <item-select
+          model="rdCtrl.report.employeeName"
+          model-id="rdCtrl.report.employeeId"
+          placeholder="employee"
+          provider="rdCtrl.provideEmployees(request)"
+        >
+        </item-select>
+      </div>
+      <div class="form-group">
+        <label for="hoursNumber">Comment</label>
+        <textarea
+          class="form-control"
+          rows="3"
+          ng-show="!rdCtrl.reportId"
+          ng-model="rdCtrl.report.comment"
+        ></textarea>
+        <p ng-show="rdCtrl.reportId" ng-model="rdCtrl.report.comment"></p>
+      </div>
+    </form>
+  </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="rdCtrl.save()">
+    <button
+      class="btn btn-primary"
+      type="button"
+      ng-click="rdCtrl.save()"
+      ng-show="!rdCtrl.reportId"
+    >
       Save
     </button>
     <button class="btn btn-warning" type="button" ng-click="rdCtrl.cancel()">
