--- a/src/main/frontend/src/app/nav/nav.html
+++ b/src/main/frontend/src/app/nav/nav.html
@@ -22,6 +22,7 @@
         </div>
         <div ng-show="user.username" class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
             <ul class="nav navbar-nav">
+                <li ng-show="user.username"><a ui-serf="employee-data">My account</a> </li>
                 <li ng-show="user.username"><a ui-sref="users">Users</a></li>
                 <li ng-show="user.username"><a ui-sref="employees">Employees</a></li>
                 <li ng-show="user.username"><a ui-sref="register">Register</a></li>
