new report form validation

--- a/src/main/frontend/src/app/report-details/report-details.template.html
+++ b/src/main/frontend/src/app/report-details/report-details.template.html
@@ -4,8 +4,11 @@
     <h3 class="modal-title" ng-show="rdCtrl.reportId">Work preview</h3>
   </div>
   <div class="modal-body">
-    <form>
-      <div class="form-group">
+    <form name="reportForm">
+      <div
+        class="form-group"
+        ng-class="{'has-error': reportForm.date.$touched && reportForm.date.$invalid}"
+      >
         <label for="date">Date</label>
         <p class="input-group" ng-show="!rdCtrl.reportId">
           <input
@@ -18,6 +21,7 @@
             close-text="Close"
             placeholder="date"
             name="date"
+            required
           />
           <span class="input-group-btn">
             <button
@@ -29,17 +33,43 @@
             </button>
           </span>
         </p>
-        <p ng-show="rdCtrl.reportId" ng-model="rdCtrl.report.hoursNumber"></p>
+        <span
+          class="help-block"
+          ng-show="reportForm.date.$touched && reportForm.date.$invalid"
+          >Report date is required.</span
+        >
       </div>
-      <div class="form-group">
+      <p ng-show="rdCtrl.reportId">{{ rdCtrl.report.date }}</p>
+      <div
+        class="form-group"
+        ng-class="{'has-error': reportForm.hoursNumber.$touched && reportForm.hoursNumber.$invalid}"
+      >
         <label for="hoursNumber">Hours number</label>
         <div class="input-group" ng-show="!rdCtrl.reportId">
-          <input type="number" class="form-control" />
+          <input
+            type="number"
+            class="form-control"
+            name="hoursNumber"
+            placeholder="hours number"
+            ng-model="rdCtrl.report.hoursNumber"
+            required
+            ng-min="0"
+            ng-max="8"
+          />
           <span class="input-group-addon">h</span>
         </div>
-        <p ng-show="rdCtrl.reportId" ng-model="rdCtrl.report.hoursNumber"></p>
+        <span
+          class="help-block"
+          ng-show="reportForm.hoursNumber.$touched && reportForm.hoursNumber.$invalid"
+          >Number of hours is required and needs to be a number between 0 and
+          8.</span
+        >
       </div>
-      <div class="form-group">
+      <p ng-show="rdCtrl.reportId">{{ rdCtrl.report.hoursNumber }}</p>
+      <div
+        class="form-group"
+        ng-class="{'has-error': !rdCtrl.isProjectSelected()}"
+      >
         <label>Project</label>
         <item-select
           model="rdCtrl.report.projectName"
@@ -49,6 +79,9 @@
           disabled="rdCtrl.reportId"
         >
         </item-select>
+        <span class="help-block" ng-show="!rdCtrl.isProjectSelected()"
+          >Project is required.</span
+        >
       </div>
       <div class="form-group" ng-show="rdCtrl.reportId">
         <label>Employee</label>
@@ -60,16 +93,31 @@
         >
         </item-select>
       </div>
-      <div class="form-group">
-        <label for="hoursNumber">Comment</label>
+      <div
+        class="form-group"
+        ng-class="{'has-error': reportForm.comment.$touched && reportForm.comment.$invalid}"
+      >
+        <label for="comment">Comment</label>
         <textarea
           class="form-control"
           rows="3"
+          name="comment"
+          placeholder="describe what you have done"
           ng-show="!rdCtrl.reportId"
           ng-model="rdCtrl.report.comment"
+          required
         ></textarea>
-        <p ng-show="rdCtrl.reportId" ng-model="rdCtrl.report.comment"></p>
+        <span
+          class="help-block"
+          ng-show="reportForm.comment.$touched && reportForm.comment.$invalid"
+          >Comment is required.</span
+        >
       </div>
+      <p ng-show="rdCtrl.reportId">{{ rdCtrl.report.comment }}</p>
+      <label ng-show="rdCtrl.reportId">
+        <input type="checkbox" ng-model="rdCtrl.report.accepted" />
+        Accepted
+      </label>
     </form>
   </div>
   <div class="modal-footer">
@@ -78,6 +126,7 @@
       type="button"
       ng-click="rdCtrl.save()"
       ng-show="!rdCtrl.reportId"
+      ng-disabled="reportForm.$invalid || !rdCtrl.isProjectSelected()"
     >
       Save
     </button>
