--- a/src/main/frontend/src/app/nav/nav.html
+++ b/src/main/frontend/src/app/nav/nav.html
@@ -23,7 +23,7 @@
         <div ng-show="user.username" class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
             <ul class="nav navbar-nav">
                 <li ng-show="user.username"><a ui-sref="employees">Employees</a></li>
-                <li ng-show="user.username"><a ui-sref="register">Register</a></li>
+                <li ng-show="AuthService.hasRole('ADMIN')"><a ui-sref="register">Register</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li ng-show="user.username"><a> <span class="user">Hi, {{user.name}}</span> <span ng-click="logout()" href="" class="logout">Logout</span></a></li>
