--- a/src/main/frontend/src/app/register/register.html
+++ b/src/main/frontend/src/app/register/register.html
@@ -70,7 +70,7 @@
                     <button type="submit" class="btn btn-default"
                             ng-disabled="userForm.$invalid || (confirmPassword != appUser.password)">Register
                     </button>
-                    <button class="btn btn-default" ui-sref="users">Cancel</button>
+                    <button class="btn btn-default" ui-sref="employees">Cancel</button>
                     <div class="alert alert-info" style="margin-top:15px;" ng-show="message">{{message}}</div>
                 </form>
             </div>
