--- a/src/main/frontend/src/app/report-details/report-details.template.html
+++ b/src/main/frontend/src/app/report-details/report-details.template.html
@@ -102,7 +102,7 @@
           class="form-control"
           rows="3"
           name="comment"
-          placeholder="describe what you have done"
+          placeholder="describe what have you done"
           ng-show="!rdCtrl.reportId"
           ng-model="rdCtrl.report.comment"
           required
