--- a/src/main/frontend/src/app/employees-list/employees-list.template.html
+++ b/src/main/frontend/src/app/employees-list/employees-list.template.html
@@ -96,12 +96,11 @@
           <td>{{ employee.manager }}</td>
           <td td-ul list="employee.projects"></td>
           <td class="text-center">
-            <button
-              class="btn btn-info"
+            <span
               ng-clik="elCtrl.openEmployeeModal(employee.id)"
-            >
-              Edit
-            </button>
+              uib-tooltip="Edit employee"
+              ><i class="glyphicon glyphicon-pencil"></i
+            ></span>
           </td>
         </tr>
       </tbody>
