--- a/src/main/frontend/src/app/employees-list/employees-list.template.html
+++ b/src/main/frontend/src/app/employees-list/employees-list.template.html
@@ -52,7 +52,10 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="pull-right">
-            <button class="btn btn-info" ng-click="elCtrl.openEmployeeModal()">
+            <button
+              class="btn btn-primary"
+              ng-click="elCtrl.openEmployeeModal()"
+            >
               <span>Add Employee </span>
               <small><i class="glyphicon glyphicon-plus"></i></small>
             </button>
