employee modal form

--- a/src/main/frontend/src/app/employees-list/employees-list.template.html
+++ b/src/main/frontend/src/app/employees-list/employees-list.template.html
@@ -33,16 +33,16 @@
       <div class="row">
         <div class="col-md-4 margin-bottom">
           <item-select
-            model="elCtrl.employeesManagerNameFilter"
-            model-id="elCtrl.employeesManagerIdFilter"
-            placeholder="manager"
-            provider="elCtrl.provideManagers(request)"
+            model="elCtrl.filterCriteria.supervisorName"
+            model-id="elCtrl.filterCriteria.supervisorId"
+            placeholder="supervisor"
+            provider="elCtrl.provideEmployees(request)"
           >
           </item-select>
         </div>
         <div class="col-md-4 margin-bottom">
           <multi-item-select
-            model="elCtrl.projectsFilter"
+            model="elCtrl.filterCriteria.projects"
             placeholder="projects"
             provider="elCtrl.provideProjects(request)"
           >
