--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -15,10 +15,11 @@
           class="form-control"
           name="username"
           placeholder="username"
-          ng-model="rdCtrl.report.username"
+          ng-model="edCtrl.employee.username"
           required
           ng-minlength="2"
           ng-maxlength="32"
+          ng-disabled="edCtrl.employeeId"
         />
         <span
           class="help-block"
@@ -37,7 +38,7 @@
           class="form-control"
           name="name"
           placeholder="name"
-          ng-model="rdCtrl.report.name"
+          ng-model="edCtrl.employee.name"
           required
           ng-minlength="2"
           ng-maxlength="32"
@@ -58,7 +59,7 @@
           class="form-control"
           name="surname"
           placeholder="surname"
-          ng-model="rdCtrl.report.surname"
+          ng-model="edCtrl.employee.surname"
           required
           ng-minlength="2"
           ng-maxlength="32"
@@ -80,7 +81,7 @@
           class="form-control"
           name="email"
           placeholder="email"
-          ng-model="rdCtrl.report.email"
+          ng-model="edCtrl.employee.email"
           required
         />
         <span
@@ -89,8 +90,7 @@
           >Email is required and needs to be a valid email address.</span
         >
       </div>
-
-      <div class="panel panel-default">
+      <div class="panel panel-default" ng-show="!edCtrl.employeeId">
         <div class="panel-body">
           <div
             class="form-group"
@@ -102,7 +102,7 @@
               class="form-control"
               name="password"
               placeholder="password"
-              ng-model="rdCtrl.report.password"
+              ng-model="edCtrl.employee.password"
               required
               ng-minlength="8"
               ng-maxlength="64"
@@ -116,7 +116,7 @@
           </div>
           <div
             class="form-group"
-            ng-class="{'has-error': employeeForm.password.$touched && employeeForm.confirmPassword.$touched && rdCtrl.report.password != rdCtrl.confirmPassword}"
+            ng-class="{'has-error': employeeForm.password.$touched && employeeForm.confirmPassword.$touched && edCtrl.employee.password != edCtrl.confirmPassword}"
           >
             <label for="confirmPassword">Confirm password</label>
             <input
@@ -124,16 +124,45 @@
               class="form-control"
               name="confirmPassword"
               placeholder="confirm password"
-              ng-model="rdCtrl.confirmPassword"
+              ng-model="edCtrl.confirmPassword"
               required
             />
             <span
               class="help-block"
-              ng-show="employeeForm.password.$touched && employeeForm.confirmPassword.$touched && rdCtrl.report.password != rdCtrl.confirmPassword"
+              ng-show="employeeForm.password.$touched && employeeForm.confirmPassword.$touched && edCtrl.employee.password != edCtrl.confirmPassword"
               >Passwords needs to be the same.</span
             >
           </div>
         </div>
+      </div>
+      <div class="form-group">
+        <label>Projects</label>
+        <multi-item-select
+          model="edCtrl.employee.projects"
+          placeholder="projects"
+          provider="edCtrl.provideProjects(request)"
+        >
+        </multi-item-select>
+      </div>
+      <div class="form-group">
+        <label>Supervisor</label>
+        <item-select
+          model="edCtrl.employee.supervisorName"
+          model-id="edCtrl.employee.supervisorId"
+          placeholder="supervisor"
+          provider="edCtrl.provideEmployees(request)"
+        >
+        </item-select>
+      </div>
+      <div class="form-group">
+        <label>Role</label>
+        <item-select
+          model="edCtrl.employee.role"
+          model-id="edCtrl.roleId"
+          placeholder="role"
+          provider="edCtrl.provideRoles(request)"
+        >
+        </item-select>
       </div>
     </form>
   </div>
