--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -144,7 +144,10 @@
         >
         </multi-item-select>
       </div>
-      <div class="form-group">
+      <div
+        class="form-group"
+        ng-class="{'has-error': !edCtrl.employee.supervisorId || !edCtrl.employee.supervisorName}"
+      >
         <label>Supervisor</label>
         <item-select
           model="edCtrl.employee.supervisorName"
@@ -153,8 +156,13 @@
           provider="edCtrl.provideEmployees(request)"
         >
         </item-select>
+        <span
+          class="help-block"
+          ng-show="!edCtrl.employee.supervisorId || !edCtrl.employee.supervisorName"
+          >Supervisor is required.</span
+        >
       </div>
-      <div class="form-group">
+      <div class="form-group" ng-class="{'has-error': !edCtrl.employee.role}">
         <label>Role</label>
         <item-select
           model="edCtrl.employee.role"
@@ -163,11 +171,19 @@
           provider="edCtrl.provideRoles(request)"
         >
         </item-select>
+        <span class="help-block" ng-show="!edCtrl.employee.role"
+          >Role is required.</span
+        >
       </div>
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" type="button" ng-click="edCtrl.save()">
+    <button
+      class="btn btn-primary"
+      type="button"
+      ng-click="edCtrl.save()"
+      ng-disabled="employeeForm.$invalid || !edCtrl.employee.role || !edCtrl.employee.supervisorId"
+    >
       Save
     </button>
     <button class="btn btn-warning" type="button" ng-click="edCtrl.cancel()">
