--- a/src/main/frontend/src/app/login/login.html
+++ b/src/main/frontend/src/app/login/login.html
@@ -1,3 +1,4 @@
+<script src="../report-details/report-details.component.js"></script>
 <div class=" col-md-4 col-md-offset-4">
 	<div class="panel panel-default">
 		<div class="panel-heading">Login</div>
